--- a/Encriptacion/Encriptacion.csproj
+++ b/Encriptacion/Encriptacion.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <ApplicationIcon />
+    <StartupObject></StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Encriptacion.Core\Encriptacion.Core.csproj" />
+  </ItemGroup>
 
 </Project>
