Inicio de aplicación WPF

--- a/Encriptacion/Properties/launchSettings.json
+++ b/Encriptacion/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Encriptacion": {
       "commandName": "Project",
-      "commandLineArgs": "\"d:\\rafac\\Documents\\claves.cod\" d"
+      "commandLineArgs": "\"K:\\AES\\vfpencryption71\\cripto.txt\" d"
     }
   }
 }
